# DatabaseManagementSystemInC-

./: .gitignore  README.md
Assets/: QUERIES.txt  TAB1.txt  TAB2.txt
Project/: CMakeLists.txt  Classes_And_Functions.cpp  Classes_And_Functions.h  main.cpp
